# lfd480-173-aug19

./: cclean
LAB11/11.1/vector-3d/: Cargo.toml
LAB11/11.6/temp-trait/: Cargo.toml
LAB11/11.7/student-traits/: Cargo.toml
LAB11/11.8/generic-sum/: Cargo.toml
LAB11/11.9/generic-stats/: Cargo.toml
LAB12/12.1/cities-1/: Cargo.toml
LAB12/12.2/currying-1/: Cargo.toml
LAB13/13.1/iterators-1/: Cargo.toml
LAB13/13.2/fac-it/: Cargo.toml
LAB13/13.2/fib-it/: Cargo.toml
LAB14/14.1/lifetimes-1/: Cargo.toml  README.md
LAB14/14.2/lifetimes-2/: Cargo.toml  README.md
LAB14/14.3/lifetimes-3/: Cargo.toml  README.md
LAB15/15.1/snake_case_converter/: Cargo.toml
LAB16/16.1/env-1/: Cargo.toml
LAB16/16.2/calc-dir-size/: Cargo.toml
LAB16/16.2/file-and-dir-1/: Cargo.toml
LAB16/16.2/filter-by-size/: Cargo.toml
LAB16/16.3/proc-1/: Cargo.toml
LAB16/16.3/proc-2/: Cargo.toml
LAB16/16.3/proc-3/: Cargo.toml
LAB16/16.3/proc-4/: Cargo.toml
LAB17/lab17.1/myfac/: Cargo.toml
LAB18/18.1/box-2/: Cargo.toml
LAB18/18.1/box-3/: Cargo.toml
LAB18/18.1/box-4/: Cargo.toml
LAB18/18.1/dynamic_memory_box/: Cargo.toml
LAB18/18.2/deep-recursion/: Cargo.toml
LAB18/18.2/list-ops/: Cargo.toml
LAB18/18.2/living-in-a-box/: Cargo.toml
LAB18/18.2/recursive-box/: Cargo.toml
LAB18/18.3/tree-1/: Cargo.toml
LAB19/19.1/basic-2/: Cargo.toml
LAB19/19.1/basic-3/: Cargo.toml
LAB19/19.1/basic-4/: Cargo.toml
LAB19/19.1/basic-concurrency/: Cargo.toml
LAB5/calc-2/: Cargo.toml
LAB9/test-panic/: Cargo.toml
SRC/rust-qeq/: Cargo.toml
SRC/rust-qeq/src/: lib.rs  main.rs
(+152 files in other folders)
